[package]
name = "har-viewer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
gloo-file = { version = "0.3", features = ["futures"] }
gloo-timers = { version = "0.3", features = ["futures"] }
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "DataTransfer",
    "DomRect",
    "DragEvent",
    "Element",
    "File",
    "FileList",
    "HtmlElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "MouseEvent",
    "Storage",
    "Window",
] }



